[project]
name = "mbu_boldbanen"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "automation-server-client",
  "mbu_msoffice_integration>=1.0.1",
  "mbu-dev-shared-components>=3.0.0",
  "mbu-rpa-core",
  "requests >= 2.31.0",
  "requests_ntlm >= 1.2.0",
  "pywin32 >= 306",
  "openpyxl >= 3.1.2",
  "office365-rest-python-client",
  "pandas >= 2.2.3",
  "python-dateutil == 2.9.*",
  "pyodbc >= 5.1.0",
  "sqlalchemy >= 2.0.20",
  "sqlalchemy[asyncio] >= 2.0.20",
  "cryptography >= 43.0.0",
  "Pillow == 10.*",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }

[tool.setuptools]
py-modules = []
